Fix missing finalizeFrame barriers in WebGL animations

BUG=693100
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2699713005
Cr-Commit-Position: refs/heads/master@{#452223}

Former-commit-id: 02b0b43a38dfc706a751f8983972e56ef6b81ccb